Symfony 3.3 | clean services

--- a/src/Aml/Bundle/ContactUsBundle/Resources/config/services.yml
+++ b/src/Aml/Bundle/ContactUsBundle/Resources/config/services.yml
@@ -5,26 +5,30 @@ services:
     sonata.block.service.contact_us_messages:
           class: Aml\Bundle\ContactUsBundle\Block\Service\AdminMessagesBlockService
           arguments:
-              - sonata.block.service.contact_us_messages
-              - "@templating"
-              - "@doctrine.orm.entity_manager"
+              - 'sonata.block.service.contact_us_messages'
+              - '@templating'
+              - '@doctrine.orm.entity_manager'
           tags:
               - { name: sonata.block }
 
     aml_contactus.message.post:
-          class: Aml\Bundle\ContactUsBundle\EventListener\PostListener
-          tags:
-              - { name: kernel.event_listener, event: aml_contactus.message.post_sent, method: onPostEvent }
-          arguments: ['@mailer', '@doctrine.orm.entity_manager', '%aml_contact_us.subribers%']
+        class: Aml\Bundle\ContactUsBundle\EventListener\PostListener
+        tags:
+            - { name: kernel.event_listener, event: aml_contactus.message.post_sent, method: onPostEvent }
+        arguments:
+            - '@mailer'
+            - '@doctrine.orm.entity_manager'
+            - '%aml_contact_us.subribers%'
 
     aml_contactus.sitemap.generate:
-          class: Aml\Bundle\ContactUsBundle\EventListener\SitemapListener
-          arguments:
-            - '@router'
-          tags:
-              - { name: kernel.event_listener, event: aml_web.sitemap.generate_start, method: onGenerateSitemapEvent }
+        class: Aml\Bundle\ContactUsBundle\EventListener\SitemapListener
+        arguments:
+          - '@router'
+        tags:
+            - { name: kernel.event_listener, event: aml_web.sitemap.generate_start, method: onGenerateSitemapEvent }
 
-    aml_contactus.contact.contact_message:
-        class: Aml\Bundle\ContactUsBundle\Contact\ContactMessage
-        arguments: ['@doctrine.orm.entity_manager', '@mailer','@event_dispatcher']
-
+    Aml\Bundle\ContactUsBundle\Contact\ContactMessage:
+        arguments:
+          - '@doctrine.orm.entity_manager'
+          - '@mailer'
+          - '@event_dispatcher'
