--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,9 @@
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
     "symfony/phpunit-bridge": "^3.2",
-    "phpunit/phpunit": "~6.0"
+    "phpunit/phpunit": "~6.0",
+    "nelmio/alice": "^3.1",
+    "doctrine/doctrine-fixtures-bundle": "^2.4"
   },
   "scripts": {
     "post-install-cmd": [
