--- a/src/Aml/Bundle/BlogBundle/Resources/config/services.yml
+++ b/src/Aml/Bundle/BlogBundle/Resources/config/services.yml
@@ -1,12 +1,8 @@
 services:
-    aml_blog.sitemap.generate:
-        class: Aml\Bundle\BlogBundle\EventListener\SitemapListener
-        arguments:
-            - '@doctrine.orm.entity_manager'
-            - '@router'
+    Aml\Bundle\BlogBundle\EventListener\SitemapListener:
+        autowire: true
         tags:
-            - { name: kernel.event_listener, event: aml_web.sitemap.generate_start, method: onGenerateSitemapEvent }
+            - name: kernel.event_subscriber
 
     Aml\Bundle\BlogBundle\Article\ArticleManager:
-        arguments:
-            - '@doctrine.orm.default_entity_manager'
+        autowire: true
