--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,7 +1,7 @@
 imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
-    - { resource: services.yml }
+    - { resource: services/ }
 
 framework:
     #esi:             ~
