--- a/app/config/services/contact.yml
+++ b/app/config/services/contact.yml
@@ -3,7 +3,7 @@ parameters:
 
 services:
     sonata.block.service.contact_us_messages:
-          class: Aml\Bundle\ContactUsBundle\Block\Service\AdminMessagesBlockService
+          class: Aml\Bundle\WebBundle\Block\Service\AdminMessagesBlockService
           arguments:
               - 'sonata.block.service.contact_us_messages'
               - '@templating'
@@ -12,7 +12,7 @@ services:
               - { name: sonata.block }
 
     aml_contactus.message.post:
-        class: Aml\Bundle\ContactUsBundle\EventListener\PostListener
+        class: Aml\Bundle\WebBundle\EventListener\PostListener
         tags:
             - { name: kernel.event_listener, event: aml_contactus.message.post_sent, method: onPostEvent }
         arguments:
@@ -20,14 +20,7 @@ services:
             - '@doctrine.orm.entity_manager'
             - '%aml_contact_us.subribers%'
 
-    aml_contactus.sitemap.generate:
-        class: Aml\Bundle\ContactUsBundle\EventListener\SitemapListener
-        arguments:
-          - '@router'
-        tags:
-            - { name: kernel.event_listener, event: aml_web.sitemap.generate_start, method: onGenerateSitemapEvent }
-
-    Aml\Bundle\ContactUsBundle\Contact\ContactMessage:
+    Aml\Bundle\WebBundle\Contact\ContactMessage:
         arguments:
           - '@doctrine.orm.entity_manager'
           - '@mailer'
