--- a/app/config/services/services.yml
+++ b/app/config/services/services.yml
@@ -9,6 +9,31 @@ services:
         tags:
             - { name: kernel.event_listener, event: aml_web.sitemap.generate_start, method: onGenerateSitemapEvent }
 
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    # Service Configuration
+    twig.extension.text:
+        class: Twig_Extensions_Extension_Text
+        tags:
+           - { name: twig.extension }
+
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags:
+           - { name: twig.extension }
+
+    aml.twig.word_warp_extension:
+        class: Aml\Bundle\WebBundle\Twig\WordWarpExtension
+        tags:
+          - { name: twig.extension }
+
+    aml.twig.nice_date_extension:
+        class: Aml\Bundle\WebBundle\Twig\PublicStatusExtension
+        tags:
+            - { name: twig.extension }
+
+    aml.twig.substring_extension:
+        class: Aml\Bundle\WebBundle\Twig\SubstringExtension
+        tags:
+          - { name: twig.extension }
+
+    fos_user.doctrine_registry:
+        alias: doctrine
