--- a/src/Aml/Bundle/WebBundle/DataFixtures/ORM/blog_fixtures.yml
+++ b/src/Aml/Bundle/WebBundle/DataFixtures/ORM/blog_fixtures.yml
@@ -1,16 +1,16 @@
 
-Aml\Bundle\BlogBundle\Entity\Category:
+Aml\Bundle\WebBundle\Entity\Category:
     category_{1..4}:
         name: <text(10)>
         description: <text(100)>
 
-Aml\Bundle\BlogBundle\Entity\Tags:
+Aml\Bundle\WebBundle\Entity\Tags:
     tag_{1..20}:
         name (unique): <text(10)>
         description: <text(100)>
         weight: <numberBetween(1, 10)>
 
-Aml\Bundle\BlogBundle\Entity\Article:
+Aml\Bundle\WebBundle\Entity\Article:
     article_{1..50}:
         title: <text(50)>
         body: <text(500)>
