--- a/src/Aml/Bundle/WebBundle/DataFixtures/ORM/evenements_fixtures.yml
+++ b/src/Aml/Bundle/WebBundle/DataFixtures/ORM/evenements_fixtures.yml
@@ -1,10 +1,10 @@
-Aml\Bundle\EvenementsBundle\Entity\Season:
+Aml\Bundle\WebBundle\Entity\Season:
     season_{1..5}:
         name: "Season_<current()>"
         dateStart: '<dateTimeBetween("-5 years", "now")>'
         dateEnd: '<dateTimeBetween($dateStart, "+1 years")>'
 
-Aml\Bundle\EvenementsBundle\Entity\Evenement:
+Aml\Bundle\WebBundle\Entity\Evenement:
     event_{1..50}:
         title: <text(10)>
         description: <text(100)>
