--- a/app/config/services/services.yml
+++ b/app/config/services/services.yml
@@ -2,6 +2,9 @@ parameters:
     app_google_analytics.account_id: "%ga_account_id%"
 
 services:
+    Aml\Bundle\WebBundle\Utils\Slugger:
+        autowire: true
+
     Aml\Bundle\WebBundle\EventListener\SitemapListener:
         autowire: true
         arguments:
