--- a/src/Aml/Bundle/WebBundle/DataFixtures/ORM/discography_fixtures.yml
+++ b/src/Aml/Bundle/WebBundle/DataFixtures/ORM/discography_fixtures.yml
@@ -15,7 +15,7 @@ Aml\Bundle\WebBundle\Entity\Album:
         tracks: '<numberBetween(1, 30)>x @track_*'
         url: '@url_album_<current()>'
 
-Aml\Bundle\UrlRewriteBundle\Entity\UrlDiscography:
+Aml\Bundle\WebBundle\Entity\UrlDiscography:
     url_album_{1..5}:
         urlKey (unique): 'setUrlKey(<text(10)>)'
 
