Refacto - merge bundle medias and web

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,3 @@
-aml_medias:
-    resource: "@AmlMediasBundle/Resources/config/routing.yml"
-    prefix:   /
-
 # Internal routing configuration to handle ESI
 #_internal:
 #    resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
@@ -32,6 +28,7 @@ aml_users:
 _liip_imagine:
     resource: "@LiipImagineBundle/Resources/config/routing.xml"
 
+# SONATA ADMIN
 admin_sonata:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
     prefix: /admin
