--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -131,7 +131,7 @@ sonata_intl:
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
-    user_class: Aml\Bundle\UsersBundle\Entity\User
+    user_class: Aml\Bundle\WebBundle\Entity\User
     from_email:
       address:        noreply@aml87.fr
       sender_name:    "%site_name%"
