--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,12 +1,12 @@
 imports:
     - { resource: config.yml }
 
-doctrine:
-    orm:
-        auto_mapping: true
-        query_cache_driver:    apc
-        metadata_cache_driver: apc
-        result_cache_driver: apc
+#doctrine:
+#    orm:
+#        auto_mapping: true
+#        query_cache_driver:    apc
+#        metadata_cache_driver: apc
+#        result_cache_driver: apc
 
 monolog:
     handlers:
