--- a/app/config/services/services.yml
+++ b/app/config/services/services.yml
@@ -40,3 +40,24 @@ services:
 
     fos_user.doctrine_registry:
         alias: doctrine
+
+    ## KNP
+    app.menu_builder:
+        class: Aml\Bundle\WebBundle\Menu\MenuBuilder
+        arguments: ["@knp_menu.factory"]
+
+    app.main_menu:
+        class: Knp\Menu\MenuItem # the service definition requires setting the class
+        factory: ["@app.menu_builder", createMainMenu]
+        arguments:
+            - "@request_stack"
+        tags:
+            - { name: knp_menu.menu, alias: main } # The alias is what is used to retrieve the menu
+
+    app.breadcrumb_menu:
+        class: Knp\Menu\MenuItem
+        factory: ["@app.menu_builder", createBreadcrumbMenu]
+        arguments:
+            - "@request_stack"
+        tags:
+            - { name: knp_menu.menu, alias: breadcrumb } # The alias is used in the template
