--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -30,8 +30,8 @@ monolog:
         #    type:   chromephp
         #    level:  info
 
-assetic:
-    use_controller: true
+#assetic:
+#    use_controller: true
 
 #swiftmailer:
 #    delivery_address: me@example.com
