--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -13,8 +13,8 @@ aml_web:
 #    resource: .
 #     type:     imagine
 
-_liip_imagine:
-    resource: "@LiipImagineBundle/Resources/config/routing.xml"
+#_liip_imagine:
+#    resource: "@LiipImagineBundle/Resources/config/routing.xml"
 
 # SONATA ADMIN
 admin_sonata:
