--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,11 @@
   },
   "require": {
     "php": ">=7.0.0",
-    "symfony/symfony": "3.4.*",
-    "symfony/swiftmailer-bundle": "^2.3.10",
-    "symfony/monolog-bundle": "^3.1",
+    "symfony/symfony": "^4.0",
+    "symfony/swiftmailer-bundle": "^3.2",
+    "symfony/monolog-bundle": "^3.2",
     "symfony/dependency-injection": "^3.1",
     "symfony/framework-bundle": "^3.1",
-    "symfony/assetic-bundle": "^2.8",
     "symfony/security-bundle": "^3.0",
     "symfony/security-acl": "^3.0",
     "symfony/polyfill-apcu": "^1.6",
@@ -33,10 +32,8 @@
     "doctrine/orm": "^2.5",
     "doctrine/doctrine-bundle": "^1.8",
     "doctrine/doctrine-cache-bundle": "^1.3",
-    "sensio/distribution-bundle": "^5.0",
     "sensio/framework-extra-bundle": "^5.1",
     "incenteev/composer-parameter-handler": "^2.1",
-    "kriswallsmith/assetic": "^1.4",
     "friendsofsymfony/user-bundle": "^2.0",
     "google/apiclient": "^2.1",
     "dms/dms-filter-bundle": "^2.0",
@@ -51,12 +48,9 @@
     "knplabs/knp-menu": "^2.3",
     "knplabs/knp-menu-bundle": "^2.2",
     "twig/twig": "^2.4",
-    "liip/imagine-bundle": "^1.9",
-    "egeloen/ckeditor-bundle": "^5.0",
-    "sentry/sentry-symfony": "^0.7.1"
+    "sentry/sentry-symfony": "^2.0"
   },
   "require-dev": {
-    "sensio/generator-bundle": "^3.1",
     "symfony/phpunit-bridge": "^4.0",
     "phpunit/phpunit": "^6.5",
     "nelmio/alice": "^3.1",
