--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
     "symfony/webpack-encore-pack": "^1.0",
     "friendsofsymfony/ckeditor-bundle": "^1.1",
     "friendsofsymfony/user-bundle": "^2.1",
-    "symfony/templating": "^4.1"
+    "symfony/templating": "^4.1",
+    "doctrine/doctrine-migrations-bundle": "^1.3"
   },
   "require-dev": {
     "symfony/phpunit-bridge": "^3.1",
@@ -68,7 +69,8 @@
     "symfony/profiler-pack": "^1.0",
     "symfony/web-server-bundle": "^3.1",
     "symfony/browser-kit": "^3.1",
-    "symfony/css-selector": "^3.1"
+    "symfony/css-selector": "^3.1",
+    "phpstan/phpstan-shim": "^0.9.2"
   },
   "scripts": {
     "auto-scripts": {
