--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,8 @@
     "symfony/web-server-bundle": "^3.1",
     "symfony/browser-kit": "^3.1",
     "symfony/css-selector": "^3.1",
-    "phpstan/phpstan-shim": "^0.9.2"
+    "phpstan/phpstan-shim": "^0.9.2",
+    "codacy/coverage": "dev-master"
   },
   "scripts": {
     "auto-scripts": {
