--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
     "friendsofsymfony/ckeditor-bundle": "^1.1",
     "friendsofsymfony/user-bundle": "^2.1",
     "symfony/templating": "^4.1",
-    "doctrine/doctrine-migrations-bundle": "^1.3"
+    "doctrine/doctrine-migrations-bundle": "^1.3",
+    "sensiolabs/security-checker": "^4.1"
   },
   "require-dev": {
     "symfony/phpunit-bridge": "^3.1",
