--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     }
   },
   "require": {
-    "php": ">=7.0.0",
+    "php": ">=7.1.0",
     "symfony/swiftmailer-bundle": "^3.2",
-    "symfony/monolog-bundle": "^3.2",
-    "symfony/dependency-injection": "^3.1",
-    "symfony/framework-bundle": "^3.1",
-    "symfony/security-bundle": "^3.1",
+    "symfony/monolog-bundle": "^3.3",
+    "symfony/dependency-injection": "^4.1",
+    "symfony/framework-bundle": "^4.1",
+    "symfony/security-bundle": "^4.1",
     "symfony/security-acl": "^3.0",
     "symfony/polyfill-apcu": "^1.6",
     "doctrine/dbal": "^2.5",
@@ -33,47 +33,41 @@
     "incenteev/composer-parameter-handler": "^2.1",
     "google/apiclient": "^2.1",
     "dms/dms-filter-bundle": "^2.0",
-    "sonata-project/doctrine-orm-admin-bundle": "^3.3",
-    "sonata-project/intl-bundle": "^2.4",
-    "sonata-project/core-bundle": "^3.12",
-    "sonata-project/cache": "^2.0",
-    "sonata-project/block-bundle": "^3.11",
-    "sonata-project/exporter": "^1.8",
-    "sonata-project/admin-bundle": "^3.35",
     "jms/serializer": "^1.10",
     "knplabs/knp-menu": "^2.3",
     "knplabs/knp-menu-bundle": "^2.2",
     "twig/twig": "^2.4",
     "sentry/sentry-symfony": "^2.0",
-    "symfony/flex": "^1.0",
-    "symfony/asset": "^3.1",
+    "symfony/flex": "^1.1",
+    "symfony/asset": "^4.1",
     "symfony/orm-pack": "^1.0",
-    "symfony/twig-bundle": "^3.1",
-    "symfony/form": "^3.1",
-    "symfony/translation": "^3.1",
-    "symfony/validator": "^3.1",
+    "symfony/twig-bundle": "^4.1",
+    "symfony/form": "^4.1",
+    "symfony/translation": "^4.1",
+    "symfony/validator": "^4.1",
     "liip/imagine-bundle": "^2.0",
     "symfony/webpack-encore-pack": "^1.0",
     "friendsofsymfony/ckeditor-bundle": "^1.1",
     "friendsofsymfony/user-bundle": "^2.1",
     "symfony/templating": "^4.1",
     "doctrine/doctrine-migrations-bundle": "^1.3",
-    "sensiolabs/security-checker": "^4.1"
+    "sensiolabs/security-checker": "^4.1",
+    "symfony/yaml": "^4.1",
+    "twig/extensions": "^1.5"
   },
   "require-dev": {
     "symfony/phpunit-bridge": "^3.1",
     "phpunit/phpunit": "^7.1",
     "nelmio/alice": "^3.1",
     "doctrine/doctrine-fixtures-bundle": "^3.0",
-    "symfony/dotenv": "^3.1",
-    "symfony/maker-bundle": "^1.1",
+    "symfony/dotenv": "^4.1",
+    "symfony/maker-bundle": "^1.7",
     "symfony/profiler-pack": "^1.0",
-    "symfony/web-server-bundle": "^3.1",
+    "symfony/web-server-bundle": "^4.1",
     "symfony/browser-kit": "^3.1",
     "symfony/css-selector": "^3.1",
     "phpstan/phpstan-shim": "^0.9.2",
-    "codacy/coverage": "dev-master",
-    "friendsofphp/php-cs-fixer": "^2.12"
+    "codacy/coverage": "dev-master"
   },
   "scripts": {
     "auto-scripts": {
