--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,8 @@
     "doctrine/doctrine-migrations-bundle": "^1.3",
     "sensiolabs/security-checker": "^4.1",
     "symfony/yaml": "^4.1",
-    "twig/extensions": "^1.5"
+    "twig/extensions": "^1.5",
+    "easycorp/easyadmin-bundle": "^2.0"
   },
   "require-dev": {
     "symfony/phpunit-bridge": "^3.1",
