--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,6 @@
     "twig/twig": "^2.4",
     "sentry/sentry-symfony": "^2.0",
     "symfony/flex": "^1.1",
-    "symfony/asset": "^4.1",
     "symfony/orm-pack": "^1.0",
     "symfony/twig-bundle": "^4.1",
     "symfony/form": "^4.1",
@@ -47,13 +46,15 @@
     "symfony/validator": "^4.1",
     "liip/imagine-bundle": "^2.0",
     "symfony/webpack-encore-pack": "^1.0",
-    "friendsofsymfony/ckeditor-bundle": "^1.1",
+    "friendsofsymfony/ckeditor-bundle": " ^2.0",
     "friendsofsymfony/user-bundle": "^2.1",
     "symfony/templating": "^4.1",
     "doctrine/doctrine-migrations-bundle": "^1.3",
     "sensiolabs/security-checker": "^4.1",
     "symfony/yaml": "^4.1",
-    "twig/extensions": "^1.5"
+    "twig/extensions": "^1.5",
+    "easycorp/easyadmin-bundle": "^2.0",
+    "symfony/webpack-encore-bundle": "^1.0"
   },
   "require-dev": {
     "symfony/phpunit-bridge": "^3.1",
@@ -73,8 +74,8 @@
     "auto-scripts": {
       "cache:clear": "symfony-cmd",
       "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
-      "security-checker security:check": "script",
-      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+      "assets:install %PUBLIC_DIR%": "symfony-cmd",
+      "security-checker security:check": "script"
     }
   },
   "conflict": {
