--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.17.0",
+    "@symfony/webpack-encore": "^0.22.2",
     "bootstrap": "4.1.1",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.2",
@@ -11,5 +11,13 @@
     "cd-pretty-photo": "^0.0.3",
     "dev": "^0.1.3",
     "node-sass-css-importer": "^0.0.3"
+  },
+  "license": "UNLICENSED",
+  "private": true,
+  "scripts": {
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production --progress"
   }
 }
