--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "devDependencies": {
     "@symfony/webpack-encore": "^0.22.2",
-    "bootstrap": "4.1.1",
+    "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.2",
-    "popper.js": "1.14.3",
+    "popper.js": "^1.14.6",
     "sass-loader": "^7.0.3"
   },
   "dependencies": {
     "cd-pretty-photo": "^0.0.3",
     "dev": "^0.1.3",
+    "mdbootstrap": "^4.7.0",
     "node-sass-css-importer": "^0.0.3"
   },
   "license": "UNLICENSED",
