--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,7 +2,9 @@ twig:
     paths: ['%kernel.project_dir%/templates']
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
-    form_themes: ['bootstrap_4_layout.html.twig']
+    form_themes:
+        - 'form/material_design_layout.html.twig'
+        - 'bootstrap_4_layout.html.twig'
     globals:
         project_name: '%env(APP_PROJECT_NAME)%'
         site_name: '%env(APP_SITE_NAME)%'
